name:               plate
version:            0.0.1
synopsis:           A simple web server
license:            AGPL-3
license-file:       LICENSE
author:             Kinoru
copyright:          Copyright (C) 2015 Kinoru
category:           Web
build-type:         Simple
-- extra-source-files:
cabal-version:      >=1.18

executable plate
  main-is:          Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    bytestring == 0.10.*,
    http-types == 0.8.*,
    wai == 3.0.*,
    warp == 3.1.*,
    http-date,
    cmdargs == 0.10.*,
    unix,
    network,
    time,
    directory,
    filepath,
    unix,
    attoparsec,
    text,
    cmark == 0.3.*,
    base >=4.8 && <4.9
  hs-source-dirs:   src
  ghc-options: -static -optl-pthread -optl-static -optl-s -Wall -O2 -threaded
  default-language: Haskell2010
