name:               saha
version:            0.1.0
synopsis:           A simple web server
license:            AGPL-3
license-file:       LICENSE
author:             Kinoru
copyright:          Copyright (C) 2015 Kinoru
category:           Web
build-type:         Simple
-- extra-source-files:
cabal-version:      >=1.18

executable saha
  extensions:       OverloadedStrings
  main-is:          Main.hs
  build-depends:
    attoparsec == 0.13.*,
    cmark == 0.4.*,
    cmdargs == 0.10.*,
    http-date == 0.0.*,
    http-types == 0.8.*,
    network == 2.6.*,
    wai == 3.0.*,
    warp == 3.1.*,

    bytestring,
    directory,
    filepath,
    text,
    time,
    unix,
    base >=4.8 && <4.9
  hs-source-dirs:   src
  ghc-options: -static -optl-pthread -optl-static -optl-s -Wall -O2 -threaded -rtsopts
  default-language: Haskell2010

executable saha-server
  extensions:       OverloadedStrings
  main-is:          Server.hs
  hs-source-dirs:   src
  ghc-options: -static -optl-pthread -optl-static -optl-s -Wall -O2 -threaded -rtsopts
  default-language: Haskell2010
  build-depends:
    bytestring == 0.10.*,
    cmdargs == 0.10.*,
    cmark == 0.4.*,
    http-date == 0.0.*,
    http-types == 0.8.*,
    network == 2.6.*,
    wai == 3.0.*,
    warp == 3.1.*,

    directory,
    unix,
    base >=4.8 && <4.9

