name:               saha
version:            0.2.0
synopsis:           A simple server for static websites with cool URIs
license:            AGPL-3
license-file:       LICENSE
author:             XT
copyright:          Copyright (C) 2015-2017 XT
category:           Web
build-type:         Simple
extra-source-files:
  README.md
  CHANGELOG.md
cabal-version:      >=1.18

executable saha
  default-extensions:   OverloadedStrings
  main-is:          Main.hs
  other-modules:
    Compile
    Parser
    RecursiveContents
    Server.ModifiedTime
    Server.Run
    Server.UnixSocket
  build-depends:
    attoparsec,
    bytestring,
    cmark,
    cmdargs,
    directory,
    filepath,
    http-date,
    http-types,
    network,
    text,
    time,
    unix,
    wai,
    warp,
    base >=4.9 && <5
  hs-source-dirs:   src
  ghc-options: -static -Wall -O2 -threaded -rtsopts
  default-language: Haskell2010

executable saha-server
  default-extensions:   OverloadedStrings
  main-is:          Server.hs
  hs-source-dirs:   src
  other-modules:
    Server.ModifiedTime
    Server.Run
    Server.UnixSocket
  ghc-options: -static -Wall -O2 -threaded -rtsopts
  default-language: Haskell2010
  build-depends:
    bytestring == 0.10.*,
    cmdargs == 0.10.*,
    cmark == 0.5.*,
    http-date == 0.0.*,
    http-types == 0.9.*,
    network == 2.6.*,
    wai == 3.*,
    warp == 3.*,

    directory,
    unix,
    base >=4.9 && <5

