name:               starplate
version:            0.0.1
synopsis:           A do-the-right-thing web server
license:            AGPL-3
license-file:       LICENSE
author:             Keynoru
copyright:          Copyright (C) 2015 Keynoru
category:           Web
build-type:         Simple
-- extra-source-files:
cabal-version:      >=1.18

executable starplate
  main-is:          Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    bytestring == 0.10.*,
    http-types == 0.8.*,
    wai == 3.0.*,
    warp == 3.0.*,
    http-date,
    cmdargs == 0.10.*,
    unix,
    network,
    time,
    directory,
    base >=4.8 && <4.9
  hs-source-dirs:   src/webserver
  ghc-options: -static -optl-pthread -optl-static -Wall -O2 -threaded
  default-language: Haskell2010

executable starplate-compiler
  main-is:          Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    directory,
    filepath,
    unix,
    attoparsec,
    text,
    cmark == 0.3.*,
    base >=4.8 && <4.9
  hs-source-dirs:   src/mdcompiler
  ghc-options: -Wall -O2
  default-language: Haskell2010
